--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
@@ -11,10 +11,57 @@
     <Filter Include="Library">
       <UniqueIdentifier>{32caf449-5f8a-44de-9c35-12a810a867d2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Main\SceneManager">
+      <UniqueIdentifier>{356cc942-e061-4a00-9032-affb7176436f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\Scene">
+      <UniqueIdentifier>{39e17fd2-1083-4e33-a39d-7ff6ecb25bfa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\Scene\GamaScene">
+      <UniqueIdentifier>{3b9a9488-4607-4e1e-994a-af549f58ac11}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\Scene\TitleScene">
+      <UniqueIdentifier>{f0389b79-a87e-4596-9fe6-b75a5f4a9644}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="stdafx">
+      <UniqueIdentifier>{eea47411-877d-410d-8ada-94bf242ef2a3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main\Main.cpp">
       <Filter>Main</Filter>
     </ClCompile>
+    <ClCompile Include="SceneManager\SceneManager.cpp">
+      <Filter>Main\SceneManager</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager\Scene\Scene.cpp">
+      <Filter>Main\SceneManager\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager\Scene\GameScene\GameScene.cpp">
+      <Filter>Main\SceneManager\Scene\GamaScene</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager\Scene\TitleScene\TitleScene.cpp">
+      <Filter>Main\SceneManager\Scene\TitleScene</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>stdafx</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SceneManager\SceneManager.h">
+      <Filter>Main\SceneManager</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager\Scene\Scene.h">
+      <Filter>Main\SceneManager\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager\Scene\GameScene\GameScene.h">
+      <Filter>Main\SceneManager\Scene\GamaScene</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager\Scene\TitleScene\TitleScene.h">
+      <Filter>Main\SceneManager\Scene\TitleScene</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>stdafx</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
