--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
@@ -1,76 +1,62 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Main">
-      <UniqueIdentifier>{3ea5041f-98f9-42af-a1d8-0d26be68566a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Library">
-      <UniqueIdentifier>{32caf449-5f8a-44de-9c35-12a810a867d2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Main\SceneManager">
-      <UniqueIdentifier>{356cc942-e061-4a00-9032-affb7176436f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Main\SceneManager\Scene">
-      <UniqueIdentifier>{39e17fd2-1083-4e33-a39d-7ff6ecb25bfa}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Main\SceneManager\Scene\GamaScene">
-      <UniqueIdentifier>{3b9a9488-4607-4e1e-994a-af549f58ac11}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Main\SceneManager\Scene\TitleScene">
-      <UniqueIdentifier>{f0389b79-a87e-4596-9fe6-b75a5f4a9644}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="stdafx">
-      <UniqueIdentifier>{eea47411-877d-410d-8ada-94bf242ef2a3}</UniqueIdentifier>
-    <Filter Include="Library\DX11Manager">
-      <UniqueIdentifier>{f07eecfd-b133-4a8d-8216-d28a6bacf94a}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
+    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="Library\DX11Manager\DX11Manager.cpp">
+      <Filter>Library</Filter>
+    </ClCompile>
     <ClCompile Include="Main\Main.cpp">
       <Filter>Main</Filter>
     </ClCompile>
-    <ClCompile Include="SceneManager\SceneManager.cpp">
+    <ClCompile Include="Main\SceneManager\SceneManager.cpp">
       <Filter>Main\SceneManager</Filter>
     </ClCompile>
-    <ClCompile Include="SceneManager\Scene\Scene.cpp">
+    <ClCompile Include="Main\SceneManager\Scene\Scene.cpp">
       <Filter>Main\SceneManager\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="SceneManager\Scene\GameScene\GameScene.cpp">
-      <Filter>Main\SceneManager\Scene\GamaScene</Filter>
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\GameScene.cpp">
+      <Filter>Main\SceneManager\Scene\GameScene</Filter>
     </ClCompile>
-    <ClCompile Include="SceneManager\Scene\TitleScene\TitleScene.cpp">
+    <ClCompile Include="Main\SceneManager\Scene\TitleScene\TitleScene.cpp">
       <Filter>Main\SceneManager\Scene\TitleScene</Filter>
-    </ClCompile>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>stdafx</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SceneManager\SceneManager.h">
-      <Filter>Main\SceneManager</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneManager\Scene\Scene.h">
-      <Filter>Main\SceneManager\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneManager\Scene\GameScene\GameScene.h">
-      <Filter>Main\SceneManager\Scene\GamaScene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneManager\Scene\TitleScene\TitleScene.h">
-      <Filter>Main\SceneManager\Scene\TitleScene</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
-      <Filter>stdafx</Filter>
-    <ClCompile Include="Library\DX11Manager\DX11Manager.cpp">
-      <Filter>Library\DX11Manager</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
+    <ClInclude Include="stdafx.h" />
     <ClInclude Include="Library\DX11Manager\DX11Manager.h">
-      <Filter>Library\DX11Manager</Filter>
+      <Filter>Library</Filter>
     </ClInclude>
+    <ClInclude Include="Main\SceneManager\SceneManager.h">
+      <Filter>Main\SceneManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Main\SceneManager\Scene\Scene.h">
+      <Filter>Main\SceneManager\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\GameScene.h">
+      <Filter>Main\SceneManager\Scene\GameScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Main\SceneManager\Scene\TitleScene\TitleScene.h">
+      <Filter>Main\SceneManager\Scene\TitleScene</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Library">
+      <UniqueIdentifier>{81b452a9-d848-4744-a563-d6f3fdcdafb6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main">
+      <UniqueIdentifier>{ab33a3da-dd2e-4024-bfdc-bed82dc525a7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager">
+      <UniqueIdentifier>{43a7a68d-0f7b-40f4-bdde-c974f8515fd8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\Scene">
+      <UniqueIdentifier>{9c674c58-49b8-4ae1-868e-0baec8198c1b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\Scene\GameScene">
+      <UniqueIdentifier>{5b274c4c-1c7f-4951-9de9-4526680194b0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\Scene\TitleScene">
+      <UniqueIdentifier>{f592d59e-a32a-4e66-ab4d-3086b2773ee9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
