--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Library\DX11Manager\DX11Manager.cpp">
       <Filter>Library</Filter>
     </ClCompile>
@@ -20,9 +19,11 @@
     <ClCompile Include="Main\SceneManager\Scene\TitleScene\TitleScene.cpp">
       <Filter>Main\SceneManager\Scene\TitleScene</Filter>
     </ClCompile>
+    <ClCompile Include="Main\SceneManager\SceneFactory\SceneFactory.cpp">
+      <Filter>Main\SceneManager\SceneFactory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h" />
     <ClInclude Include="Library\DX11Manager\DX11Manager.h">
       <Filter>Library</Filter>
     </ClInclude>
@@ -37,6 +38,9 @@
     </ClInclude>
     <ClInclude Include="Main\SceneManager\Scene\TitleScene\TitleScene.h">
       <Filter>Main\SceneManager\Scene\TitleScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Main\SceneManager\SceneFactory\SceneFactory.h">
+      <Filter>Main\SceneManager\SceneFactory</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +61,9 @@
     </Filter>
     <Filter Include="Main\SceneManager\Scene\TitleScene">
       <UniqueIdentifier>{f592d59e-a32a-4e66-ab4d-3086b2773ee9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Main\SceneManager\SceneFactory">
+      <UniqueIdentifier>{7d2a4205-28be-4fa4-9f16-150acc21428a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
