#9 InputDeviceManagerクラスの実装
キーデバイスの状態を取得できるようにした
マウスデバイスの状態を取得できるようにした

--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
@@ -12,6 +12,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Library\DX11Manager\DX11Manager.cpp" />
+    <ClCompile Include="Library\InputDeviceManager\InputDeviceManager.cpp" />
+    <ClCompile Include="Library\InputDeviceManager\KeyDevice\KeyDevice.cpp" />
+    <ClCompile Include="Library\InputDeviceManager\MouseDevice\MouseDevice.cpp" />
     <ClCompile Include="Main\Main.cpp" />
     <ClCompile Include="Main\SceneManager\SceneFactory\SceneFactory.cpp" />
     <ClCompile Include="Main\SceneManager\SceneManager.cpp" />
@@ -21,6 +24,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main\SceneManager\SceneFactory\SceneFactory.h" />
+    <ClInclude Include="Library\InputDeviceManager\InputDeviceManager.h" />
+    <ClInclude Include="Library\InputDeviceManager\KeyDevice\KeyDevice.h" />
+    <ClInclude Include="Library\InputDeviceManager\MouseDevice\MouseDevice.h" />
     <ClInclude Include="Main\SceneManager\SceneManager.h" />
     <ClInclude Include="Main\SceneManager\Scene\GameScene\GameScene.h" />
     <ClInclude Include="Main\SceneManager\Scene\Scene.h" />
@@ -69,7 +75,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>winmm.lib;d3d11.lib;d3dx11.lib;d3dx10.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;d3d11.lib;d3dx11.lib;d3dx10.lib;dxguid.lib;dinput8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
