--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="Library\DX11Manager\DX11Manager.cpp">
       <Filter>Library\DX11Manager</Filter>
     </ClCompile>
+    <ClCompile Include="Library\DSoundManager\DSoundManager.cpp">
+      <Filter>Library\DSoundManager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main\SceneManager\SceneManager.h">
@@ -59,6 +62,9 @@
     </ClInclude>
     <ClInclude Include="Library\DX11Manager\DX11Manager.h">
       <Filter>Library\DX11Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\DSoundManager\DSoundManager.h">
+      <Filter>Library\DSoundManager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +100,9 @@
     </Filter>
     <Filter Include="Library\DX11Manager">
       <UniqueIdentifier>{08b44af7-abeb-4719-abdd-3bfce21e592f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Library\DSoundManager">
+      <UniqueIdentifier>{3ca60592-24e7-4646-9c2e-2fd9e1f448d1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
