--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="Library\InputDeviceManager\MouseDevice\MouseDevice.cpp" />
     <ClCompile Include="Library\TextureManager\TextureManager.cpp" />
     <ClCompile Include="Library\ShaderManager\ShaderManager.cpp" />
+    <ClCompile Include="Library\Vertex2D\Vertex2D.cpp" />
     <ClCompile Include="Main\Main.cpp" />
     <ClCompile Include="Main\SceneManager\SceneFactory\SceneFactory.cpp" />
     <ClCompile Include="Main\SceneManager\SceneManager.cpp" />
@@ -31,6 +32,7 @@
     <ClInclude Include="Library\DebugFont\DebugFont.h" />
     <ClInclude Include="Library\TextureManager\TextureManager.h" />
     <ClInclude Include="Library\ShaderManager\ShaderManager.h" />
+    <ClInclude Include="Library\Vertex2D\Vertex2D.h" />
     <ClInclude Include="Main\SceneManager\SceneFactory\SceneFactory.h" />
     <ClInclude Include="Library\InputDeviceManager\InputDeviceManager.h" />
     <ClInclude Include="Library\InputDeviceManager\KeyDevice\KeyDevice.h" />
@@ -50,6 +52,13 @@
       </EntryPointName>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Effect</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Library\Vertex2D\Vertex2D.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+      </EntryPointName>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Effect</ShaderType>
     </FxCompile>
   </ItemGroup>
   <PropertyGroup Label="Globals">
